--- a/app/globals.css
+++ b/app/globals.css
@@ -9,13 +9,17 @@
 }
 
 .btn-purple {
-    @apply bg-bookmark-purple text-white
+    @apply bg-slate-700 text-white
 }
 
 .btn-white {
-    @apply bg-bookmark-white
+    @apply bg-zinc-200
 }
 
 .btn-red {
     @apply bg-bookmark-red text-white
+}
+
+.btn-zinc {
+    @apply bg-zinc-500 text-white
 }
